--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,22 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ipykernel = "*"
-pandas = "*"
-plotly = "*"
-scipy = "*"
-nbformat = "*"
+httpx = "0.25.0"
+numpy = "1.24.3"
+requests = "2.31.0"
+pandas = "2.0.3"
+datetime = "5.2"
+pyarrow = "13.0.0"
+fastparquet = "2023.10.0"
+pyotp = "2.9.0"
+fyers-apiv3 = "3.0.5"
+dill = "0.3.7"
+frozendict = "*"
+bs4 = "*"
+matplotlib = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
